<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicapp.HomeActivity">

    <TextView
        style="@style/TextStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_red_light"
        android:text="@string/music_library" />

    <Button
        android:id="@+id/artists"
        style="@style/ButtonStyle"
        android:background="@android:color/holo_green_light"
        android:text="@string/category_artists" />

    <Button
        android:id="@+id/albums"
        style="@style/ButtonStyle"
        android:background="@android:color/holo_orange_light"
        android:text="@string/category_albums" />

    <Button
        android:id="@+id/playlists"
        style="@style/ButtonStyle"
        android:background="@android:color/holo_purple"
        android:text="@string/category_playlists" />

    <Button
        android:id="@+id/genre"
        style="@style/ButtonStyle"
        android:background="@android:color/holo_blue_light"
        android:text="@string/category_genre" />

    <Button
        android:id="@+id/search"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/darker_gray"
        android:text="@string/search" />

</LinearLayout>
