<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicapp.ListActivity">


    <TextView
        style="@style/TextStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_red_light"
        android:text="@string/category_list" />

    <Button
        android:id="@+id/details"
        style="@style/ButtonStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_purple"
        android:text="@string/list_item" />

    <Button
        android:id="@+id/now_playing_list"
        style="@style/ButtonStyle"
        android:background="@android:color/holo_green_light"
        android:text="@string/now_playing" />

    <Button
        android:id="@+id/search_list"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/darker_gray"
        android:text="@string/search" />

</LinearLayout>
